// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`roleattributes.sql > line 2 1`] = `
[
  "CREATE ROLE regress_test_def_superuser",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_test_def_superuser",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`roleattributes.sql > line 4 1`] = `
[
  "SELECT rolname, rolsuper, rolinherit, rolcreaterole, rolcreatedb, rolcanlogin, rolreplication, rolbypassrls, rolconnlimit, rolpassword, rolvaliduntil FROM pg_authid WHERE rolname = 'regress_test_def_superuser'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 155,
                  "relname": "pg_authid",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolname",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolsuper",
                          },
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 26,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolinherit",
                          },
                        },
                      ],
                      "location": 26,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 38,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolcreaterole",
                          },
                        },
                      ],
                      "location": 38,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 53,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolcreatedb",
                          },
                        },
                      ],
                      "location": 53,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 66,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolcanlogin",
                          },
                        },
                      ],
                      "location": 66,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 79,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolreplication",
                          },
                        },
                      ],
                      "location": 79,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 95,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolbypassrls",
                          },
                        },
                      ],
                      "location": 95,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 109,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolconnlimit",
                          },
                        },
                      ],
                      "location": 109,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 123,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolpassword",
                          },
                        },
                      ],
                      "location": 123,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 136,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "rolvaliduntil",
                          },
                        },
                      ],
                      "location": 136,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "rolname",
                        },
                      },
                    ],
                    "location": 171,
                  },
                },
                "location": 179,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 181,
                    "sval": {
                      "sval": "regress_test_def_superuser",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`roleattributes.sql > line 13 1`] = `
[
  "CREATE ROLE regress_test_def_inherit",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_test_def_inherit",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`roleattributes.sql > line 23 1`] = `
[
  "CREATE ROLE regress_test_def_createrole",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_test_def_createrole",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`roleattributes.sql > line 33 1`] = `
[
  "CREATE ROLE regress_test_def_createdb",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_test_def_createdb",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`roleattributes.sql > line 43 1`] = `
[
  "CREATE ROLE regress_test_def_role_canlogin",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_test_def_role_canlogin",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`roleattributes.sql > line 53 1`] = `
[
  "CREATE USER regress_test_def_user_canlogin",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_test_def_user_canlogin",
            "stmt_type": "ROLESTMT_USER",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`roleattributes.sql > line 63 1`] = `
[
  "CREATE ROLE regress_test_def_replication",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_test_def_replication",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`roleattributes.sql > line 73 1`] = `
[
  "CREATE ROLE regress_test_def_bypassrls",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_test_def_bypassrls",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`roleattributes.sql > line 83 1`] = `
[
  "DROP ROLE regress_test_def_superuser",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "roles": [
              {
                "RoleSpec": {
                  "location": 10,
                  "rolename": "regress_test_def_superuser",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
